erDiagram
    USUARIOS {
        int id_usuario PK
        varchar nombre
        varchar usuario UK
        varchar password
        enum rol
        tinyint estado
        timestamp created_at
    }

    CATEGORIAS {
        int id_categoria PK
        varchar nombre UK
        varchar descripcion
        tinyint estado
    }

    PRODUCTOS {
        int id_producto PK
        varchar codigo_barras UK
        varchar nombre
        int id_categoria FK
        decimal precio_compra
        decimal precio_venta
        int stock
        int stock_minimo
        varchar unidad_medida
        tinyint estado
    }

    CLIENTES {
        int id_cliente PK
        enum tipo_documento
        varchar numero_documento UK
        varchar nombres
        varchar apellidos
        varchar razon_social
        varchar telefono
        varchar direccion
        tinyint estado
    }

    SERIES_COMPROBANTE {
        int id_serie PK
        enum tipo_comprobante
        varchar serie
        int ultimo_correlativo
    }

    VENTAS {
        int id_venta PK
        int id_usuario FK
        int id_cliente FK
        enum tipo_comprobante
        varchar serie
        int correlativo
        datetime fecha
        decimal subtotal
        decimal igv
        decimal total
        enum metodo_pago
        enum estado
    }

    DETALLE_VENTA {
        int id_detalle PK
        int id_venta FK
        int id_producto FK
        int cantidad
        decimal precio_unitario
        decimal subtotal
    }

    MOVIMIENTOS_INVENTARIO {
        int id_movimiento PK
        int id_producto FK
        enum tipo
        int cantidad
        int stock_anterior
        int stock_nuevo
        varchar motivo
        int id_venta FK
        int id_usuario FK
        datetime fecha
    }

    CONFIGURACION {
        varchar clave PK
        varchar valor
        varchar descripcion
    }

    CATEGORIAS ||--o{ PRODUCTOS : clasifica
    USUARIOS   ||--o{ VENTAS : registra
    CLIENTES   |o--o{ VENTAS : recibe
    VENTAS     ||--|{ DETALLE_VENTA : contiene
    PRODUCTOS  ||--o{ DETALLE_VENTA : figura_en
    PRODUCTOS  ||--o{ MOVIMIENTOS_INVENTARIO : registra
    USUARIOS   ||--o{ MOVIMIENTOS_INVENTARIO : ejecuta
    VENTAS     |o--o{ MOVIMIENTOS_INVENTARIO : origina
